#1221: Move setupWindowsTerminal method
Also adjust getGitBashIconPath method to not work with Strings instead of Paths